<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/hasSponsor"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <ImageButton
            android:id="@+id/helpNowButton"
            android:src="@drawable/ic_help_now"
            android:contentDescription="@string/help_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/slippingButton"
            android:src="@drawable/ic_slipping"
            android:contentDescription="@string/slipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/goodButton"
            android:src="@drawable/ic_good"
            android:contentDescription="@string/good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/noSponsor"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="@string/must_pick_sponsor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/pickSponsorButton"
        android:text="@string/pick_sponsor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>

